# cgram

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-llvm.sh
cgram_generator/: __main__.py  checker.py  errors.py  generator.py  main.py  models.py  parser.py  type.h.jinja2
cli/: CMakeLists.txt  main.c
include/cgram/: cgram.h  http.h  params.h  parser.h  requests.h  str.h  to_json.h  types.h  types_common.h
include/cgram/types/: Chat.h  ChatPhoto.h  User.h  common.h
src/: CMakeLists.txt  cgram.c  http.c  params.c  parser.c  requests.c  str.c
src/types/: User.c
templates/: method.c.jinja2  method.h.jinja2  methods.h.jinja2  parser.c.jinja2  type.h.jinja2  types.h.jinja2
