[tool.poetry]
name = "cgram-generator"
version = "0.1.0"
description = ""
authors = ["Stanislav <h3xcode@envs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"
rich = "^13.6.0"
coloredlogs = "^15.0.1"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
